@@ -8,7 +8,7 @@
     <artifactId>Linguagem_Programacao</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-<properties>
+    <properties>
         <maven.compiler.source>24</maven.compiler.source>
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,6 +31,11 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
@@ -67,8 +72,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
+                    <mainClass>fatec.gov.br/fatec.gov.br.e1.cadastrocsv.App</mainClass>
                     <options>
                         <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=javafx.media</option>
                     </options>
                 </configuration>
             </plugin>
@@ -79,4 +86,18 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>calculo-media</id>
+            <properties>
+                <javafx.main.class>fatec.gov.br/fatec.gov.br.e1.calculomedia.CalculoMediaApp</javafx.main.class>
+            </properties>
+        </profile>
+        <profile>
+            <id>video</id>
+            <properties>
+                <javafx.main.class>fatec.gov.br/fatec.gov.br.e1.video.Main</javafx.main.class>
+            </properties>
+        </profile>
+    </profiles>
 </project>
